--- a/produtos/pdf.html
+++ b/produtos/pdf.html
@@ -209,7 +209,7 @@
 
         @font-face {
         font-family: 'Andrea Bellarosa';
-        src: url('font/Andrea Bellarosa.ttf') format('truetype');
+        src: url('../font/Andrea Bellarosa.ttf') format('truetype');
         }
 
 
