--- a/index.html
+++ b/index.html
@@ -156,6 +156,14 @@
     </article>
 
     <article class="categoria-card">
+      <div class="categoria-nome">Gerar Documento PDF</div>
+      <div class="categoria-descricao">
+        Criação de um documento PDF por meio de imagem
+      </div>
+      <a href="produtos/pdf.html" class="categoria-botao">Registrar</a>
+    </article>
+
+    <article class="categoria-card">
       <div class="categoria-nome">MBA</div>
       <div class="categoria-descricao">
         Registrar mandados de busca e apreensão.
