--- a/produtos/pdf.html
+++ b/produtos/pdf.html
@@ -384,14 +384,15 @@
     <!-- Observações e Atenção -->
     <div class="observacoes">
       <strong>OBSERVAÇÕES</strong>
-        <p>1. NÃO PODERÁ POSSUIR PASSAGENS CRIMINAIS;</p>
-        <p>2. LOCAL ONDE PRETENDE TER O ESTABELECIMENTO DEVERÁ CUMPRIR COM TODAS AS NORMAS DE SEGURANÇA PARA O FUNCIONAMENTO DO MESMO, ONDE A EQUIPE POLICIAL IRÁ ATÉ O LOCAL PARA CONFERIR SE TUDO ESTÁ DE ACORDO COM AS NORMAS DE SEGURANÇA;</p>
-        <p>3. O DONO QUE FOR EMITIR O ALVARÁ PRECISARÁ ESTAR MUNIDO DE ALGUNS DOCUMENTOS, SENDO ESSES: LOCALIZAÇÃO DO LOCAL, QUANTIDADE DE FUNCIONÁRIOS, ESPECIFICAÇÕES DO QUE SERÁ A EMPRESA E O NOME DA EMPRESA;</p>
-        <p>4. APÓS A EMISSÃO DO ALVARÁ, A POLÍCIA PODE IR ATÉ O LOCAL A QUALQUER MOMENTO PARA FISCALIZAR O AMBIENTE, A FIM DE PREVENIR POSSÍVEIS CRIMES NO LOCAL;</p>
-        <p>5. PAGAR UMA TAXA R$80.000,00 PARA A EMISSÃO DO DOCUMENTO QUE TEM UMA VALIDADE DE 30 DIAS, APÓS ESSE PERÍODO TERÁ QUE SER PAGA A TAXA NOVAMENTE PARA MANTER O ESTABELECIMENTO LEGALIZADO;</p>
+      <p>É EXPRESSAMENTE VEDADA A EMISSÃO DO ALVARÁ PARA INDIVÍDUOS QUE POSSUAM ANTECEDENTES CRIMINAIS, SENDO ESTA UMA CONDIÇÃO IMPRESCINDÍVEL PARA O DEFERIMENTO DO PEDIDO.</p>
+      <p>O IMÓVEL DESTINADO À INSTALAÇÃO DO ESTABELECIMENTO DEVERÁ ESTAR INTEGRALMENTE EM CONFORMIDADE COM AS NORMAS DE SEGURANÇA VIGENTES. A VERIFICAÇÃO SERÁ REALIZADA POR EQUIPE POLICIAL, QUE INSPECIONARÁ O LOCAL PARA ATESTAR O CUMPRIMENTO DOS REQUISITOS.</p>
+      <p>O SOLICITANTE DEVERÁ APRESENTAR, OBRIGATORIAMENTE, OS SEGUINTES DOCUMENTOS E INFORMAÇÕES: ENDEREÇO COMPLETO DO LOCAL, NÚMERO DE FUNCIONÁRIOS, DESCRIÇÃO DETALHADA DA ATIVIDADE A SER EXERCIDA E A RAZÃO SOCIAL DO EMPREENDIMENTO.</p>
+      <p>APÓS A CONCESSÃO DO ALVARÁ, A AUTORIDADE POLICIAL RESERVA-SE O DIREITO DE REALIZAR FISCALIZAÇÕES PERIÓDICAS E NÃO AGENDADAS, COM O OBJETIVO DE ASSEGURAR A ORDEM PÚBLICA E PREVENIR CONDUTAS ILÍCITAS NAS DEPENDÊNCIAS DO ESTABELECIMENTO.</p>
+      <p>SERÁ COBRADA UMA TAXA NO VALOR DE R$80.000,00 (OITENTA MIL REAIS) PARA A EMISSÃO DO DOCUMENTO, O QUAL TERÁ VALIDADE DE 30 (TRINTA) DIAS. FINDO ESSE PRAZO, SERÁ NECESSÁRIO O PAGAMENTO DE NOVA TAXA PARA RENOVAÇÃO DA AUTORIZAÇÃO.</p>
+
 
       <strong>ATENÇÃO:</strong>
-      <span>Este alvará é pessoal e intransferível, devendo estar disponível para inspeção a qualquer momento.</span>
+      <span>A inobservância de quaisquer das disposições acima acarretará, de forma imediata e sem direito a reembolso, na revogação do alvará concedido.</span>
     </div>
 
     <!-- Assinatura no final -->
