--- a/produtos/pdf.html
+++ b/produtos/pdf.html
@@ -277,7 +277,7 @@
 </head>
 <body>
 
-  <div class="form-container" id="formContainer" style="display: none;">
+  <div class="form-container" style="display: none;">
     <h2>Preencha os dados do Alvará</h2>
 
     <label for="proprietario">Proprietário:</label>
