--- a/index.html
+++ b/index.html
@@ -140,6 +140,14 @@
       <a href="produtos/pdf.html" class="categoria-botao">Registrar</a>
     </article>
 
+    <article class="categoria-card">
+      <div class="categoria-nome">Gerar Mensagem de Apreensão</div>
+      <div class="categoria-descricao">
+        Transforma o trabalho de registrar uma mensagem no discord mais fácil. Basta selecionar os itens e ele gerará uma mensagem pra você colar no discord junto a imagem dos itens
+      </div>
+      <a href="produtos/apreensão.html" class="categoria-botao">Registrar</a>
+    </article>
+
   </main>
 </body>
 </html>
