--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
       <div class="categoria-descricao">
         Transforma o trabalho de registrar uma mensagem no discord mais fácil. Basta selecionar os itens e ele gerará uma mensagem pra você colar no discord junto a imagem dos itens
       </div>
-      <a href="produtos/apreensão.html" class="categoria-botao">Registrar</a>
+      <a href="produtos/apreensao.html" class="categoria-botao">Registrar</a>
     </article>
 
   </main>
