--- a/index.html
+++ b/index.html
@@ -2,152 +2,70 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Polícia Civil DEIC</title>
-  <style>
-    /* Reset básico */
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-      background: #fff;
-      color: #222;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    /* Topo com degrade preto->branco */
-    header {
-      width: 100%;
-      background: linear-gradient(90deg, #000000, #1d1c1c);
-      color: white;
-      display: flex;
-      align-items: center;
-      gap: 20px;
-      padding: 15px 30px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.3);
-    }
-
-    header img {
-      height: 60px;
-      width: auto;
-    }
-
-    header h1 {
-      font-size: 1.5rem;
-      font-weight: 700;
-      color: #fff; /* branco sólido */
-      background: none;
-      -webkit-background-clip: unset;
-      -webkit-text-fill-color: unset;
-    }
-
-    main {
-      padding: 40px 20px;
-      width: 100%;
-      max-width: 900px;
-      background: #fff;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 30px;
-    }
-
-    /* Cards das categorias */
-    .categoria-card {
-      background: #f8f8f8;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      width: 280px;
-      padding: 20px;
-      box-shadow: 0 2px 5px rgb(0 0 0 / 0.1);
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-    }
-
-    .categoria-nome {
-      font-weight: 700;
-      font-size: 1.5rem;
-      color: #222;
-      margin-bottom: 12px;
-      text-align: center;
-    }
-
-    .categoria-descricao {
-      flex-grow: 1;
-      font-size: 1rem;
-      color: #555;
-      margin-bottom: 20px;
-      text-align: center;
-      min-height: 80px;
-    }
-
-    .categoria-botao {
-      background-color: #666666;
-      border: none;
-      padding: 12px 0;
-      color: white;
-      font-weight: 700;
-      font-size: 1rem;
-      border-radius: 6px;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-      text-align: center;
-      text-decoration: none;
-      display: block;
-    }
-
-    .categoria-botao:hover {
-      background-color: #444444;
-    }
-
-    /* Responsividade simples */
-    @media (max-width: 600px) {
-      main {
-        flex-direction: column;
-        align-items: center;
-      }
-
-      .categoria-card {
-        width: 90%;
-      }
-    }
-  </style>
+  <title>Registro de Investigação</title>
+  <link rel="stylesheet" href="arquivos/style.css" />
+  <link rel="icon" href="arquivos/Logo.png" type="image/png" />
 </head>
 <body>
   <header>
-    <img
-      src="https://upload.wikimedia.org/wikipedia/commons/a/ad/Bras%C3%A3o_Nacional_PCSP.png"
-      alt="Logo Polícia Civil"
-    />
-    <h1>Polícia Civíl - DEIC</h1>
+    <h1>Registro de Investigação</h1>
   </header>
 
-  <main>
+  <div class="main-container">
+    <div class="left">
+      <img src="arquivos/Logo.png" alt="Polícia Civil SP" />
+    </div>
 
-    <article class="categoria-card">
-      <div class="categoria-nome">Gerar Documento PDF</div>
-      <div class="categoria-descricao">
-        Criação de um documento PDF por meio de imagem
-      </div>
-      <a href="produtos/pdf.html" class="categoria-botao">Registrar</a>
-    </article>
+    <div class="right">
+      <a id="discordLogin" href="#" class="discord-button">Entrar com Discord</a>
+      <div id="loginStatus" class="status-text" style="display:none;"></div>
+    </div>
+  </div>
 
-    <article class="categoria-card">
-      <div class="categoria-nome">Gerar Mensagem de Apreensão</div>
-      <div class="categoria-descricao">
-        Transforma o trabalho de registrar uma mensagem no discord mais fácil. Basta selecionar os itens e ele gerará uma mensagem pra você colar no discord junto a imagem dos itens
-      </div>
-      <a href="produtos/apreensao.html" class="categoria-botao">Registrar</a>
-    </article>
+  <section class="form-section" style="display:none;">
+    <form id="investigationForm">
+      <h2>Registro de Investigação</h2>
 
-  </main>
+      <label for="investigator">Investigador responsável</label>
+      <input id="investigator" type="text" name="investigator" required readonly />
+
+      <label for="crimeType">Tipo de Crime</label>
+      <select id="crimeType" name="crimeType" required>
+        <option value="">Selecione</option>
+        <option value="organizado">Crime Organizado</option>
+        <option value="armas">Armas e Componentes</option>
+        <option value="cibernetico">Crimes Cibernéticos</option>
+        <option value="entorpecentes">Entorpecentes</option>
+        <option value="financeiro">Financeiro</option>
+      </select>
+
+      <label for="crimeCase">Caso (opcional)</label>
+      <select id="crimeCase" name="crimeCase">
+        <option value="N/A">N/A</option>
+        <option value="CAS-001-SP">CAS-001-SP</option>
+        <option value="CAS-002-SP">CAS-002-SP</option>
+        <option value="CAS-003-SP">CAS-003-SP</option>
+      </select>
+
+      <label for="summary">Resumo do caso</label>
+      <textarea id="summary" name="summary" rows="4" required></textarea>
+
+      <label for="observations">Observações adicionais</label>
+      <textarea id="observations" name="observations" rows="4"></textarea>
+
+      <label for="files">Evidências (máx 10 arquivos, ≤10MB cada, total ≤25MB)</label>
+      <input id="files" type="file" name="files" multiple accept="image/*,video/*" />
+      <small id="mbStatus">Total: 0 MB / 25 MB</small>
+
+      <button type="submit">Enviar</button>
+      <div id="status"></div>
+    </form>
+  </section>
+
+  <footer>
+    &copy; 2025 Polícia Civil do Estado de São Paulo. Todos os direitos reservados.
+  </footer>
+
+  <script src="arquivos/script.js"></script>
 </body>
 </html>
