--- a/produtos/pdf.html
+++ b/produtos/pdf.html
@@ -378,11 +378,11 @@
     <!-- Observações e Atenção -->
     <div class="observacoes">
       <strong>OBSERVAÇÕES</strong>
-      <p>É EXPRESSAMENTE VEDADA A EMISSÃO DO ALVARÁ PARA INDIVÍDUOS QUE POSSUAM ANTECEDENTES CRIMINAIS, SENDO ESTA UMA CONDIÇÃO IMPRESCINDÍVEL PARA O DEFERIMENTO DO PEDIDO.</p>
-      <p>O IMÓVEL DESTINADO À INSTALAÇÃO DO ESTABELECIMENTO DEVERÁ ESTAR INTEGRALMENTE EM CONFORMIDADE COM AS NORMAS DE SEGURANÇA VIGENTES. A VERIFICAÇÃO SERÁ REALIZADA POR EQUIPE POLICIAL, QUE INSPECIONARÁ O LOCAL PARA ATESTAR O CUMPRIMENTO DOS REQUISITOS.</p>
-      <p>O SOLICITANTE DEVERÁ APRESENTAR, OBRIGATORIAMENTE, OS SEGUINTES DOCUMENTOS E INFORMAÇÕES: ENDEREÇO COMPLETO DO LOCAL, NÚMERO DE FUNCIONÁRIOS, DESCRIÇÃO DETALHADA DA ATIVIDADE A SER EXERCIDA E A RAZÃO SOCIAL DO EMPREENDIMENTO.</p>
-      <p>APÓS A CONCESSÃO DO ALVARÁ, A AUTORIDADE POLICIAL RESERVA-SE O DIREITO DE REALIZAR FISCALIZAÇÕES PERIÓDICAS E NÃO AGENDADAS, COM O OBJETIVO DE ASSEGURAR A ORDEM PÚBLICA E PREVENIR CONDUTAS ILÍCITAS NAS DEPENDÊNCIAS DO ESTABELECIMENTO.</p>
-      <p>SERÁ COBRADA UMA TAXA NO VALOR DE R$80.000,00 (OITENTA MIL REAIS) PARA A EMISSÃO DO DOCUMENTO, O QUAL TERÁ VALIDADE DE 30 (TRINTA) DIAS. FINDO ESSE PRAZO, SERÁ NECESSÁRIO O PAGAMENTO DE NOVA TAXA PARA RENOVAÇÃO DA AUTORIZAÇÃO.</p>
+      <p>É terminantemente vedada a concessão do alvará de funcionamento a quaisquer indivíduos que apresentem antecedentes criminais, constituindo tal requisito condição indispensável e inafastável para o deferimento do respectivo pleito.</p>
+      <p>O imóvel destinado à instalação do estabelecimento deverá encontrar-se em plena conformidade com as normas legais e regulamentares de segurança vigentes, sendo a verificação do cumprimento dessas exigências realizada por equipe técnica da Polícia Civil, mediante inspeção presencial destinada à comprovação da adequação do local.</p>
+      <p> O requerente deverá, obrigatoriamente, instruir o pedido com os seguintes documentos e informações essenciais: endereço completo do imóvel, quantitativo de funcionários e descrição pormenorizada das atividades a serem desenvolvidas no local</p>
+      <p>Após a expedição do alvará, a autoridade policial competente reserva-se o direito de promover fiscalizações periódicas ou extraordinárias, sem aviso prévio, com a finalidade de assegurar a observância das normas legais, preservar a ordem pública e prevenir a ocorrência de práticas ilícitas no interior do estabelecimento.</p>
+      <p>Será devida a taxa administrativa no valor de R$ 10.000,00 (oitenta mil reais) para a emissão do alvará, cuja validade será de 30 (trinta) dias. Expirado esse prazo, será exigido o recolhimento de nova taxa para fins de renovação da autorização.</p>
 
 
       <strong>ATENÇÃO:</strong>
@@ -493,3 +493,4 @@ html2canvas(alvara, {
   </script>
 </body>
 </html>
+
