--- a/produtos/pdf.html
+++ b/produtos/pdf.html
@@ -392,7 +392,7 @@
     <!-- Assinatura no final -->
     <div class="assinatura-container">
       <div class="assinatura-fonte" id="assinatura-texto">________________________</div>
-      <div>Assinatura do Proprietário</div>
+      <div>Assinatura do Responsável</div>
     </div>
 
   <!-- Container para a imagem gerada -->
@@ -493,5 +493,6 @@ html2canvas(alvara, {
   </script>
 </body>
 </html>
+
 
 
