--- a/produtos/pdf.html
+++ b/produtos/pdf.html
@@ -108,6 +108,17 @@
       height: auto;
     }
 
+    /* Imagem central sobre o cabeçalho */
+    .imagem-central {
+      position: absolute;
+      top: 10px; /* ajuste se necessário */
+      left: 50%;
+      transform: translateX(-50%);
+      max-width: 200px;
+      height: auto;
+      z-index: 10;
+    }
+
     /* Novo cabeçalho centralizado no topo */
     .novo-cabecalho {
       text-align: center;
@@ -118,7 +129,6 @@
       font-weight: bold;
       color: #111;
       font-family: 'Georgia', serif;
-      /* Fonte mais atrativa e maior */
       font-size: 15px;
       font-variant: small-caps;
       letter-spacing: 1.5px;
@@ -189,12 +199,10 @@
       text-align: left;
     }
 
-        #mensagem.negado {
-        color: red;
-        font-weight: bold;
-        }
-
-
+    #mensagem.negado {
+      color: red;
+      font-weight: bold;
+    }
 
     .observacoes span {
       display: block;
@@ -207,16 +215,15 @@
       margin-bottom: 15px;
     }
 
-        @font-face {
-        font-family: 'Andrea Bellarosa';
-        src: url('../font/Andrea Bellarosa.ttf') format('truetype');
-        }
-
+    @font-face {
+      font-family: 'Andrea Bellarosa';
+      src: url('../font/Andrea Bellarosa.ttf') format('truetype');
+    }
 
     .error-message {
-        color: #e74c3c;
-        font-weight: 600;
-        display: none;
+      color: #e74c3c;
+      font-weight: 600;
+      display: none;
     }
 
     /* Assinatura fixada no fim da folha, centralizada */
@@ -234,7 +241,7 @@
       font-family: Georgia, serif;
     }
 
-    /* Fonte cursiva para assinatura f*/
+    /* Fonte cursiva para assinatura */
     .assinatura-fonte {
       font-family: "Segoe Script", "WindSong", "Lucida Handwriting", cursive;
       font-size: 28px;
@@ -242,7 +249,6 @@
       margin-bottom: 6px;
       user-select: none;
     }
-
 
     /* Botão para gerar imagem */
     #btn-gerar {
@@ -315,15 +321,18 @@
           <option value='"Dancing Script", cursive'>Dancing Script</option>
           <option value='"Pacifico", cursive'>Pacifico</option>
           <option value='"Great Vibes", cursive'>Great Vibes</option>
-            <option value="'Andrea Bellarosa'" style="font-family: 'Andrea Bellarosa';">Fonte Personalizada</option>
-
+          <option value="'Andrea Bellarosa'" style="font-family: 'Andrea Bellarosa';">Fonte Personalizada</option>
         </select>
       </div>
     </div>
 
     <button id="btn-gerar">Gerar Imagem</button>
-</div>
+  </div>
+
   <div class="alvara" id="alvara">
+
+    <!-- Imagem central sobre o cabeçalho -->
+    <img src="imagem/low.png" alt="Imagem Central" class="imagem-central" />
 
     <!-- Logos nos cantos -->
     <img src="https://i.imgur.com/szMlN2v.png" alt="Logo Esquerda" class="logo-esq" />
@@ -380,10 +389,9 @@
       <strong>OBSERVAÇÕES</strong>
       <p>É terminantemente vedada a concessão do alvará de funcionamento a quaisquer indivíduos que apresentem antecedentes criminais, constituindo tal requisito condição indispensável e inafastável para o deferimento do respectivo pleito.</p>
       <p>O imóvel destinado à instalação do estabelecimento deverá encontrar-se em plena conformidade com as normas legais e regulamentares de segurança vigentes, sendo a verificação do cumprimento dessas exigências realizada por equipe técnica da Polícia Civil, mediante inspeção presencial destinada à comprovação da adequação do local.</p>
-      <p> O requerente deverá, obrigatoriamente, instruir o pedido com os seguintes documentos e informações essenciais: endereço completo do imóvel, quantitativo de funcionários e descrição pormenorizada das atividades a serem desenvolvidas no local</p>
+      <p>O requerente deverá, obrigatoriamente, instruir o pedido com os seguintes documentos e informações essenciais: endereço completo do imóvel, quantitativo de funcionários e descrição pormenorizada das atividades a serem desenvolvidas no local</p>
       <p>Após a expedição do alvará, a autoridade policial competente reserva-se o direito de promover fiscalizações periódicas ou extraordinárias, sem aviso prévio, com a finalidade de assegurar a observância das normas legais, preservar a ordem pública e prevenir a ocorrência de práticas ilícitas no interior do estabelecimento.</p>
       <p>Será devida a taxa administrativa no valor de R$ 100.000,00 (cem mil reais) para a emissão do alvará, cuja validade será de 30 (trinta) dias. Expirado esse prazo, será exigido o recolhimento de nova taxa para fins de renovação da autorização.</p>
-
 
       <strong>ATENÇÃO:</strong>
       <span>A inobservância de quaisquer das disposições acima acarretará, de forma imediata e sem direito a reembolso, na revogação do alvará concedido.</span>
@@ -395,9 +403,10 @@
       <div>Assinatura do Responsável</div>
     </div>
 
-  <!-- Container para a imagem gerada -->
-  <div id="imagem-gerada"></div>
-</div>
+    <!-- Container para a imagem gerada -->
+    <div id="imagem-gerada"></div>
+  </div>
+
   <!-- Biblioteca para screenshot -->
   <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
   <script>
@@ -460,39 +469,24 @@
 
     // Evento botão gerar imagem
     btnGerar.addEventListener('click', () => {
+      html2canvas(alvara, {
+        scale: 2,
+        useCORS: true
+      }).then(canvas => {
+        imagemGerada.innerHTML = '';
 
-html2canvas(alvara, {
-  scale: 2,
-  useCORS: true
-}).then(canvas => {
-  imagemGerada.innerHTML = '';
+        const img = document.createElement('img');
+        img.src = canvas.toDataURL('image/png');
+        img.alt = 'Imagem do Alvará Gerada';
+        img.style.cursor = 'pointer';
+        img.addEventListener('click', () => {
+          window.open(img.src, '_blank');
+        });
 
-  const img = document.createElement('img');
-  img.src = canvas.toDataURL('image/png');
-  img.alt = 'Imagem do Alvará Gerada';
-  img.style.cursor = 'pointer';
-  img.title = 'Clique para copiar a imagem';
-
-  img.onclick = () => {
-    canvas.toBlob(blob => {
-      navigator.clipboard.write([
-        new ClipboardItem({ 'image/png': blob })
-      ]).then(() => {
-        alert('Imagem copiada para a área de transferência!');
-      }).catch(() => {
-        alert('Não foi possível copiar a imagem automaticamente. Use o botão direito para salvar.');
-      });
-    });
-  };
-
-  imagemGerada.appendChild(img);
-}).catch(err => {
-        imagemGerada.innerHTML = 'Erro ao gerar imagem: ' + err.message;
+        imagemGerada.appendChild(img);
+        img.scrollIntoView({behavior: 'smooth'});
       });
     });
   </script>
 </body>
 </html>
-
-
-
