--- a/produtos/pdf.html
+++ b/produtos/pdf.html
@@ -332,7 +332,7 @@
   <div class="alvara" id="alvara">
 
     <!-- Imagem central sobre o cabeçalho -->
-    <img src="imagem/low.png" alt="Imagem Central" class="imagem-central" />
+    <img src="low.png" alt="Imagem Central" class="imagem-central" />
 
     <!-- Logos nos cantos -->
     <img src="https://i.imgur.com/szMlN2v.png" alt="Logo Esquerda" class="logo-esq" />
