--- a/produtos/pdf.html
+++ b/produtos/pdf.html
@@ -114,7 +114,7 @@
       top: 10px; /* ajuste se necessário */
       left: 50%;
       transform: translateX(-50%);
-      max-width: 200px;
+      max-width: 120px; /* tamanho ideal */
       height: auto;
       z-index: 10;
     }
@@ -490,4 +490,5 @@
   </script>
 </body>
 </html>
+
 
