--- a/produtos/pdf.html
+++ b/produtos/pdf.html
@@ -389,9 +389,10 @@
       <strong>OBSERVAÇÕES</strong>
       <p>É terminantemente vedada a concessão do alvará de funcionamento a quaisquer indivíduos que apresentem antecedentes criminais, constituindo tal requisito condição indispensável e inafastável para o deferimento do respectivo pleito.</p>
       <p>O imóvel destinado à instalação do estabelecimento deverá encontrar-se em plena conformidade com as normas legais e regulamentares de segurança vigentes, sendo a verificação do cumprimento dessas exigências realizada por equipe técnica da Polícia Civil, mediante inspeção presencial destinada à comprovação da adequação do local.</p>
-      <p>O requerente deverá, obrigatoriamente, instruir o pedido com os seguintes documentos e informações essenciais: endereço completo do imóvel, quantitativo de funcionários e descrição pormenorizada das atividades a serem desenvolvidas no local</p>
+      <p>O requerente deverá, obrigatoriamente, instruir o pedido com os seguintes documentos e informações essenciais: endereço completo do imóvel, quantitativo de funcionários e descrição pormenorizada das atividades a serem desenvolvidas no local.</p>
       <p>Após a expedição do alvará, a autoridade policial competente reserva-se o direito de promover fiscalizações periódicas ou extraordinárias, sem aviso prévio, com a finalidade de assegurar a observância das normas legais, preservar a ordem pública e prevenir a ocorrência de práticas ilícitas no interior do estabelecimento.</p>
       <p>Será devida a taxa administrativa no valor de R$ 100.000,00 (cem mil reais) para a emissão do alvará, cuja validade será de 30 (trinta) dias. Expirado esse prazo, será exigido o recolhimento de nova taxa para fins de renovação da autorização.</p>
+
 
       <strong>ATENÇÃO:</strong>
       <span>A inobservância de quaisquer das disposições acima acarretará, de forma imediata e sem direito a reembolso, na revogação do alvará concedido.</span>
@@ -490,6 +491,7 @@
   </script>
 </body>
 </html>
+
 
 
 
