--- a/produtos/pdf.html
+++ b/produtos/pdf.html
@@ -340,7 +340,7 @@
 
     <!-- Novo cabeçalho centralizado no topo -->
     <div class="novo-cabecalho">
-      <p>SECRETÁRIA DE SEGURANÇA PÚBLICA</p>
+      <p>SECRETARIA DE SEGURANÇA PÚBLICA</p>
       <p>POLÍCIA CIVIL DO ESTADO DE SÃO PAULO</p>
       <p class="titulo">ALVARÁ DE FUNCIONAMENTO</p>
     </div>
@@ -491,6 +491,7 @@
   </script>
 </body>
 </html>
+
 
 
 
